z-index fix

--- a/assets/css/micanOS.css
+++ b/assets/css/micanOS.css
@@ -279,7 +279,9 @@
     .nav-link {
     transition: 1s;
   }
-  
+  .navbar{
+    z-index: 9999;
+  }
   .navbar-brand {
     transition: 1s;
   }
